<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background_color"
    android:orientation="vertical">




<ImageView
    android:id="@+id/cat_image"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginStart="-10dp"
    android:layout_marginTop="-30dp"
    android:layout_marginEnd="130dp"
    android:layout_marginBottom="50dp"
    android:adjustViewBounds="true"
    android:contentDescription="@string/cat_image_description"
    android:src="@drawable/cat_main"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

<com.google.android.material.chip.ChipGroup
    android:id="@+id/chip_group"
    android:layout_width="567dp"
    android:layout_height="80dp"
    app:chipSpacingHorizontal="5dp"
    app:chipSpacingVertical="-10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:singleSelection="true">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip0"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip0" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip1"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip1" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip2"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip2" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip3"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip3" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip4"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip4" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip5"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip5" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip6"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip6" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip7"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip7" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip8"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip8" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip9"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip9" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip10"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip10" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip11"
        style="@style/ChipStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chip11" />

</com.google.android.material.chip.ChipGroup>

<LinearLayout
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@id/chip_group"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toRightOf="@id/cat_image"
    android:layout_marginLeft="-80dp"
    android:gravity="center"
    android:layout_marginRight="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="5dp"
    >

    <TextView
        android:id="@+id/info_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_motor_text"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/increase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:textSize="25sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/valueMotor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_motor_value"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/decrease_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minus"
        android:textSize="25sp"
        android:textStyle="bold" />




</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>